<resources>
    <string name="app_name">LETO Toggl</string>

    <string name="location_permission_title">"This app needs location access"</string>
    <string name="location_permission_message">"Please grant location access so this app can detect beacons."</string>

    <string name="no_location_permission_title">"Functionality limited"</string>
    <string name="no_location_permission_message">"Since location access has not been granted, this app will not be able to discover beacons when in the background."</string>

    <string name="grant_permission">"Grant permission"</string>

    <string name="bt_not_enabled_title">"Bluetooth not enabled"</string>
    <string name="bt_not_enabled_message">"Please enable bluetooth in your device settings in order to get the beacons, otherwise turn off the beacons detection from app settings."</string>
    <string name="bt_LE_not_enabled_title">"Bluetooth LE not available"</string>
    <string name="bt_LE_not_enabled_message">"Sorry, this device does not support Bluetooth LE."</string>
    <string name="title_activity_login">Sign in</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_sign_out">Sign out</string>
    <string name="welcome_back">Welcome back</string>
    <string name="this_week_time">Time tracked this week:</string>
    <string name="your_week">Your week</string>
    <string name="projects_week">Projects you are working on this week</string>
    <string name="please_wait">Please wait...</string>
    <string name="start_task">Start a new task</string>

    <string name="current_task">Current task</string>
    <string name="last_tracked_task">Last tracked task</string>
    <string name="tracking_nothing">You are tracking no tasks at the moment.</string>
    <string name="check_all">CHECK YOUR LAST 30 DAYS</string>
    <string name="no_internet_swipe">No Internet connection, swipe to refresh</string>
    <string name="no_internet">No Internet connection</string>
    <string name="settings">Settings</string>
    <string name="settings_message_format">Touch one of the images in order to enable/disable beacons detection or geofence.</string>
    <string name="beacons_enabled">BEACONS DETECTION ENABLED</string>
    <string name="beacons_disabled">BEACONS DETECTION DISABLED</string>
    <string name="geofence_enabled">GEOFENCE ENABLED</string>
    <string name="geofence_disabled">GEOFENCE DISABLED</string>
    <string name="no_detection">NO DETECTION ENABLED</string>
    <string name="beacon_uuid">Beacon UUID</string>
    <string name="beacon_uuid_content">Insert the beacon UUID you want to monitor for.</string>
    <string name="beacon_uuid_error">Please insert a valid beacon UUID or disable the beacon detection before to leave this page.</string>
    <string name="cancel">cancel</string>
    <string name="clear">clear field</string>
    <string name="save">save</string>
    <string name="turn_on_bt">Turn on bluetooth</string>
    <string name="last_month">Last 30 days history</string>
    <string name="geofence_title">Set your geofence</string>
    <string name="geofence_message">Create here your geofence by setting your workplace. You just need to long press on its location on the map.</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="error_sign_in">Invalid credentials, please try again</string>
    <string name="show_pass">Show password</string>
    <string name="no_workspace">No workspace</string>
    <string name="no_workspace_message">You need to set your workspace before to save.</string>
    <string name="registered_google">Registered with Google?</string>
    <string name="token_message">If you used your Google account to register to Toggl, you need to use your API token in order to log in. It can be found at Toggl website in your account info.</string>

    <!-- Notification actions -->
    <string name="notif_start_action">Start</string>
    <string name="notif_stop_action">Stop</string>
    <string name="notif_stop_remind">In 30 mins</string>

    <!-- Drawer -->
    <string name="time_tracker">Time tracker</string>
    <string name="last_30_days">Last 30 days history</string>
    <string name="settings_draw">Settings</string>
    <string name="i_beacon">iBeacon</string>
    <string name="geofence">Geofence</string>
    <string name="feedback">Feedback</string>
    <string name="terms_and_cond">Terms and conditions</string>
    <string name="log_out">Log out</string>

    <!--Titles-->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_beacon_settings">iBeacon</string>

</resources>
