<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".activities.LoginActivity"
    android:background="@color/light_background">

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar_top"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_background"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:background="@color/light_background"
            android:visibility="visible"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/login_progress"
                android:background="@color/light_background"
                android:visibility="gone">
                <!-- Login progress -->
                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:visibility="visible"
                    android:layout_gravity="center" />
            </FrameLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/imageView3"
                    android:src="@drawable/icon_email"
                    android:padding="20dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:theme="@style/TextLabel"
                    android:focusableInTouchMode="true"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="fill_parent"
                    android:src="@drawable/icon_password"
                    android:padding="20dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    android:focusableInTouchMode="true"
                    android:layout_marginTop="5dp"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>



            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_pass"
                android:id="@+id/show_checkBox"
                android:layout_gravity="right"
                android:checked="false"
                android:visibility="gone" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/registered_google"
                android:id="@+id/googleBtn"
                android:background="@color/transparent"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/light_grey_text_color" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="210dp"
                android:layout_height="0dp"
                android:layout_alignBottom="@+id/login_form"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:weightSum="2"
                android:layout_weight="1"
                android:gravity="bottom">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/imageView"
                    android:src="@drawable/leto_logo"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/imageView2"
                    android:src="@drawable/toggl_logo"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textSize="20sp"
            android:textColor="@color/white" />


    </android.support.v7.widget.Toolbar>

</RelativeLayout>
